--- a/resources/index.html
+++ b/resources/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval';">
-  <link rel="icon" type="image/svg+xml" href="assets/icons/icon.svg" sizes="any">
+  <link rel="icon" type="image/png" href="${ICON_PATH}">
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json"/>
-  <title>SGE</title>
+  <title>${PROJECT}</title>
 </head>
 
 <body>
