--- a/resources/index.html
+++ b/resources/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-   <canvas id="canvas" tabindex="-1"></canvas>
+  <canvas id="canvas" tabindex="-1"></canvas>
   <script type="module" src="script.js"></script>
+  <script async type="text/javascript" src="${PROJECT}.js"></script>
 </body>
 
 </html>
